[gd_scene load_steps=7 format=3 uid="uid://cf4c3wj7oprm1"]

[ext_resource type="Script" path="res://MyCanvas.gd" id="2_remli"]
[ext_resource type="StyleBox" uid="uid://cfya2l5ktvi25" path="res://SliderTheme.tres" id="3_n7i27"]
[ext_resource type="LabelSettings" uid="uid://byj2p522fpa6u" path="res://LabelSettings.tres" id="3_wjdfl"]

[sub_resource type="Gradient" id="Gradient_d6kgf"]
colors = PackedColorArray(0.947459, 0.257692, 0.369925, 1, 0.971625, 0.815293, 0, 1)

[sub_resource type="Gradient" id="Gradient_y8yti"]
colors = PackedColorArray(0.1767, 0.55335, 0.93, 1, 0.49955, 0.0291, 0.97, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gag0x"]
bg_color = Color(0.164706, 0.176471, 0.203922, 1)

[node name="Global" type="Node2D"]

[node name="Drawu" type="Node2D" parent="."]
script = ExtResource("2_remli")
wave_gradient = SubResource("Gradient_d6kgf")
freq_domain_gradient = SubResource("Gradient_y8yti")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1270, 640)
layout_mode = 3
anchors_preset = 0
offset_right = 1270.0
offset_bottom = 640.0

[node name="Anchor" type="Control" parent="Control"]
custom_minimum_size = Vector2(1270, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -99.84
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Control/Anchor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gag0x")

[node name="FreqG" type="Control" parent="Control/Anchor"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
anchors_preset = 0
offset_left = 3.0
offset_top = 9.0
offset_right = 203.0
offset_bottom = 79.0
metadata/_edit_group_ = true

[node name="HBox" type="HBoxContainer" parent="Control/Anchor/FreqG"]
layout_mode = 1
offset_right = 214.0
offset_bottom = 30.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Control/Anchor/FreqG/HBox"]
clip_contents = true
custom_minimum_size = Vector2(105, 30)
layout_mode = 2
text = "Frequency:"
label_settings = ExtResource("3_wjdfl")
vertical_alignment = 1
autowrap_mode = 2

[node name="ValueLabel" type="Label" parent="Control/Anchor/FreqG/HBox"]
clip_contents = true
custom_minimum_size = Vector2(105, 30)
layout_mode = 2
text = "4"
label_settings = ExtResource("3_wjdfl")
vertical_alignment = 1
autowrap_mode = 2

[node name="FreqSlider" type="HSlider" parent="Control/Anchor/FreqG"]
layout_mode = 0
offset_left = 3.0
offset_top = 28.0
offset_right = 182.0
offset_bottom = 60.0
theme_override_styles/slider = ExtResource("3_n7i27")
min_value = 1.0
max_value = 12.0
value = 4.0
ticks_on_borders = true
metadata/_edit_group_ = true

[node name="AmplitudeG" type="Control" parent="Control/Anchor"]
custom_minimum_size = Vector2(210, 60)
layout_direction = 2
layout_mode = 2
anchors_preset = 0
offset_left = 216.0
offset_top = 11.0
offset_right = 426.0
offset_bottom = 71.0

[node name="Label" type="Label" parent="Control/Anchor/AmplitudeG"]
layout_mode = 2
offset_right = 40.0
offset_bottom = 23.0
text = "Amplitude"
label_settings = ExtResource("3_wjdfl")

[node name="ValueLabel" type="Label" parent="Control/Anchor/AmplitudeG"]
layout_mode = 2
offset_left = 112.0
offset_top = -0.0800171
offset_right = 156.0
offset_bottom = 27.92
text = "60"
label_settings = ExtResource("3_wjdfl")
clip_text = true

[node name="AmplSlider" type="HSlider" parent="Control/Anchor/AmplitudeG"]
layout_mode = 2
offset_top = 32.0
offset_right = 210.0
offset_bottom = 48.0
theme_override_styles/slider = ExtResource("3_n7i27")
min_value = 60.0
max_value = 250.0
value = 100.0
ticks_on_borders = true

[node name="FreqAn" type="Control" parent="Control/Anchor"]
clip_contents = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
anchors_preset = 0
offset_left = 448.0
offset_top = 9.0
offset_right = 748.0
offset_bottom = 80.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Control/Anchor/FreqAn"]
clip_contents = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 0
offset_right = 200.0
offset_bottom = 35.0
text = "Frequency Analysed:"
label_settings = ExtResource("3_wjdfl")
vertical_alignment = 1

[node name="ValueLabel" type="Label" parent="Control/Anchor/FreqAn"]
clip_contents = true
custom_minimum_size = Vector2(100, 35)
layout_mode = 0
offset_left = 210.0
offset_right = 310.0
offset_bottom = 35.0
text = "1"
label_settings = ExtResource("3_wjdfl")
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Control/Anchor/FreqAn"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_top = 28.0
offset_right = 200.0
offset_bottom = 58.0
theme_override_styles/slider = ExtResource("3_n7i27")
min_value = 1.0
max_value = 12.0
value = 1.0

[connection signal="value_changed" from="Control/Anchor/FreqG/FreqSlider" to="Drawu" method="_on_freq_slider_value_changed"]
[connection signal="value_changed" from="Control/Anchor/AmplitudeG/AmplSlider" to="Drawu" method="_on_ampl_slider_value_changed"]
[connection signal="value_changed" from="Control/Anchor/FreqAn/Slider" to="Drawu" method="_on_freq_an_slider_value_changed"]
